<resources>
    <string name="app_name">Team Analyzer for VEX</string>

    <string name="team_number">Team number:</string>
    <string name="season">Season:</string>
    <string name="current_season">Skyrise</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_process">Team name</string>
    <string name="competitions_attended">Competitions attended:</string>
    <string name="average_ranking">Average ranking:</string>
    <string name="win_percent">Win percent:</string>
    <string name="highest_match_score">Highest match score:</string>
    <string name="average_match_score">Average match score:</string>
    <string name="highest_robot_skills">Highest robot skills:</string>
    <string name="highest_programming_skills">Highest programming skills:</string>
    <string name="awards">Awards:</string>
    <string name="default_value">0</string>

    <string name="hello_world">Hello world!</string>
    <string name="chart1_label">Average match score over time</string>
    <string name="chart2_label">Win percent over time</string>

    <string name="chart_prompt">Choose a stat to graph</string>
    <string-array name="chart_options">
        <item>Avg match score over time</item>
        <item>Win percent over time</item>
    </string-array>
    <string-array name="season_options">
        <item>Starstruck</item>
        <item>Nothing But Net</item>
        <item>Skyrise</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
