<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/teamNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:paddingBottom="10dp"
        android:paddingTop="2dp"
        android:text="@string/team_number"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/teamNumberET"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/teamNumberTV"
        android:layout_toRightOf="@+id/teamNumberTV"
        android:singleLine="true" />

    <TextView
        android:id="@+id/seasonTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/teamNumberTV"
        android:layout_alignRight="@+id/teamNumberTV"
        android:layout_below="@+id/teamNumberET"
        android:paddingBottom="10dp"
        android:paddingTop="2dp"
        android:text="@string/season"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/seasonSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/teamNumberET"
        android:layout_alignStart="@+id/teamNumberET"
        android:layout_alignTop="@id/seasonTV"
        android:layout_marginTop="5.5dp"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:entries="@array/season_options" />

    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/seasonTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="process"
        android:text="@string/submit"
        style="@style/GoButton"/>

    <TextView
        android:id="@+id/errorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>