<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.timothydijamco.vexteamanalyzer.ProcessActivity">

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/relativeContainer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/competitionCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/competitionsAttendedLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/competitions_attended"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/competitionsAttendedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@+id/competitionsAttendedLabel"
                        android:layout_toRightOf="@+id/competitionsAttendedLabel"
                        android:text="@string/default_value"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/averageRankingLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/competitionsAttendedLabel"
                        android:layout_marginTop="5dp"
                        android:text="@string/average_ranking"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/averageRankingValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/competitionsAttendedLabel"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@+id/averageRankingLabel"
                        android:layout_toRightOf="@+id/averageRankingLabel"
                        android:text="@string/default_value"
                        android:textSize="16sp" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Get!"
                        android:id="@+id/getButton"
                        android:onClick="getTeam"
                        android:layout_alignParentTop="true"
                        android:layout_alignLeft="@+id/averageRankingValue"
                        android:layout_alignStart="@+id/averageRankingValue" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Save"
                        android:onClick="saveTeam"
                        android:id="@+id/saveButton"
                        android:layout_alignParentBottom="true"
                        android:layout_toRightOf="@+id/competitionsAttendedValue"
                        android:layout_toEndOf="@+id/competitionsAttendedValue" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/matchesCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/competitionCard"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/winPercentLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/win_percent"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/winPercentValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@+id/winPercentLabel"
                        android:layout_toRightOf="@+id/winPercentLabel"
                        android:text="@string/default_value"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/highestMatchScoreLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/winPercentLabel"
                        android:layout_marginTop="5dp"
                        android:text="@string/highest_match_score"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/highestMatchScoreValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/winPercentLabel"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@+id/highestMatchScoreLabel"
                        android:layout_toRightOf="@+id/highestMatchScoreLabel"
                        android:text="@string/default_value"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/averageMatchScoreLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/highestMatchScoreLabel"
                        android:layout_marginTop="5dp"
                        android:text="@string/average_match_score"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/averageMatchScoreValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/highestMatchScoreLabel"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@+id/averageMatchScoreLabel"
                        android:layout_toRightOf="@+id/averageMatchScoreLabel"
                        android:text="@string/default_value"
                        android:textSize="16sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/skillsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/matchesCard"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/highestRobotSkillsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/highest_robot_skills"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/highestRobotSkillSValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@+id/highestRobotSkillsLabel"
                        android:layout_toRightOf="@+id/highestRobotSkillsLabel"
                        android:text="@string/default_value"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/highestProgrammingSkillsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/highestRobotSkillsLabel"
                        android:layout_marginTop="5dp"
                        android:text="@string/highest_programming_skills"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/highestProgrammingSkillSValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/highestRobotSkillsLabel"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@+id/highestProgrammingSkillsLabel"
                        android:layout_toRightOf="@+id/highestProgrammingSkillsLabel"
                        android:text="@string/default_value"
                        android:textSize="16sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/awardsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skillsCard"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="2dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/awardsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/awards"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/awardsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/awardsLabel"
                        android:layout_toRightOf="@+id/awardsLabel"
                        android:text="@string/default_value"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/awardsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/awardsLabel"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/default_value"
                        android:textSize="16sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/chartSpinnerContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/awardsCard"
                android:layout_marginTop="24dp"
                android:gravity="center">

                <Spinner
                    android:id="@+id/chartSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/chart_options" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/chart1Container"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_below="@id/chartSpinnerContainer"
                android:layout_marginTop="30dp">

                <lecho.lib.hellocharts.view.LineChartView
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/chart2Container"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_below="@id/chartSpinnerContainer"
                android:layout_marginTop="30dp"
                android:visibility="invisible">

                <lecho.lib.hellocharts.view.LineChartView
                    android:id="@+id/chart2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
